GNOME Bugzilla – Bug 770550
gtkplacessidebar: fix signal marshal
Last modified: 2016-09-12 08:14:58 UTC
.
Created attachment 334362 [details] [review] gtkplacessidebar: fix signal marshal We were using __VOID for the SHOW_OTHER_LOCATION signal that uses flags named SHOR_OTHER_LOCATION_WITH_FLAGS. However, if a signal uses flags the marshal needs to use __FLAGS. This patch addresses this using VOID__FLAGS as the marshaler parameter. Thanks to Jan Steffens for pointing this out.
Reviewed on IRC by Jan Steffens Attachment 334362 [details] pushed as cfe4c9e - gtkplacessidebar: fix signal marshal
*** Bug 771083 has been marked as a duplicate of this bug. ***